# open_manipulator_pick_and_place_demo

pick_and_place/pick_and_place/: package.xml
pick_and_place/pick_and_place/launch/: joint_trajectory_controller.launch  pick_and_place.launch  pick_and_place_moveit.launch
pick_and_place/pick_and_place/rviz/: pick_and_place.rviz  pick_and_place_moveit.rviz
pick_and_place/pick_and_place/urdf/: open_manipulator_robot.urdf.xacro
pick_and_place/pick_and_place_app/: CMakeLists.txt  package.xml
pick_and_place/pick_and_place_behaviors/: LICENSE  README.md
pick_and_place/pick_and_place_behaviors/pick_and_place_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
pick_and_place/pick_and_place_behaviors/pick_and_place_flexbe_behaviors/manifest/: ar_marker_test.xml  ar_marker_test_id.xml  pick_and_place.xml  pick_and_place_moveit.xml
pick_and_place/pick_and_place_behaviors/pick_and_place_flexbe_behaviors/src/pick_and_place_flexbe_behaviors/: ar_marker_test_id_sm.py  ar_marker_test_sm.py  pick_and_place_moveit_sm.py  pick_and_place_sm.py
pick_and_place/pick_and_place_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
pick_and_place/pick_and_place_moveit_config/config/: chomp_planning.yaml  fake_controllers.yaml  ompl_planning.yaml  open_manipulator.srdf  ros_controllers.yaml
pick_and_place/pick_and_place_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  open_manipulator_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
